# Re-encrusted

./: .gitignore  Cargo.toml  Containerfile  GAMELIST.md  HOWTO.md  README.md  howto.md  nginx.conf
src/rust/: instruction.rs  main.terminal.rs  main.web.rs  ui_web.rs  zmachine.rs
tests/: czech.z5.regtest  fetch-etude.sh  opcode-coverage.py  runtests.sh  terpetude-smoke.sh  v4-amfv-smoke.sh  v4-bureaucr-smoke.sh  v4-nordandb-wasm-smoke.mjs  v4-trinity-smoke.sh  v4-trinity-wasm-smoke.mjs  v5-hitchhik-smoke.sh  v5-sherlock-wasm-smoke.mjs  web-ui.test.js
web/: index.html  web.wasm
