[package]
name = "encrusted"
version = "1.2.0"
authors = ["Sterling DeMille <sterlingdemille+github@gmail.com>"]
edition = "2021"
description = "A z-machine (interpreter) for Infocom-era text adventure games"
repository = "https://github.com/YetAnotherRandomGuy/Re-encrusted"
readme = "README.md"
license = "MIT"

[[bin]]
name = "encrusted"
path = "src/rust/main.terminal.rs"

[lib]
crate-type = ["cdylib"]
name = "web"
path = "src/rust/main.web.rs"

[profile.release]
lto = true
opt-level = 's'

[dependencies]
base64 = "0.10"
num-derive = "0.4"
num-traits = "0.2"
rand = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
atty = "0.2"
clap = "2.32"
lazy_static = "1.2"
regex = "1.1"
term_size = "0.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.2", features = ["js"] }
